Warenkorb Zulassung: Zähler bei Warenkorb-Aufruf aktualisieren

--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
@@ -119,6 +119,7 @@
         $(".hidden-on-shopping-cart-opened").slideUp(200);
         $(".shopping-cart-body-inner").slideDown(200);
         FormPreparePrivateGridShoppingCard();
+        ShoppingCartMenuRefreshCount();
     }
 
     function ShoppingCartItemEdit(id) {
