--- a/Work/CarDocu/shell/UserControls/AdminGroup/ucAppSettings.xaml
+++ b/Work/CarDocu/shell/UserControls/AdminGroup/ucAppSettings.xaml
@@ -19,8 +19,9 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="40" />
-                        <RowDefinition Height="40" />
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="30" />
                     </Grid.RowDefinitions>
 
                     <TextBlock Text="Übertragungskosten sparen:" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Foreground="DarkRed" Margin="0,0,15,0" />
@@ -28,6 +29,9 @@
 
                     <TextBlock Text="Backup Funktion:" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Foreground="DarkRed" Margin="0,0,15,0" />
                     <CheckBox IsChecked="{Binding GlobalDeleteAndBackupFileAfterDelivery, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Foreground="DarkRed" FontWeight="Bold">Grundsätzlich PDF nach Netzwerk-Versand löschen und in den Backup Ordner verschieben (diese Einstellung überschreibt den Schalter in den Dokum.Arten)</CheckBox>
+
+                    <TextBlock Text="Login / Domainauswahl:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" Foreground="DarkRed" Margin="0,0,15,0" />
+                    <CheckBox IsChecked="{Binding AskForDomainSelectionAtLogin, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Foreground="DarkRed" FontWeight="Bold">Beim Login die Domainauswahl erzwingen</CheckBox>
                 </Grid>
             </StackPanel>
 
