--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Fahrzeugbestand/Partial/FahrzeugAkteBestandGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Fahrzeugbestand/Partial/FahrzeugAkteBestandGrid.cshtml
@@ -29,7 +29,7 @@
                 .HeaderTemplate(
                       "<a href='#' onclick='return FahrzeugCreateAjax();' class='btn mini gray tooltips' data-original-title='" + Localize.VehicleCreate + "' data-placement='right'><i class='halflings-icon white plus'></i></a>"
                 );
-            columns.XBoundAllExcept(m => m.Bemerkung, m => m.CocVorhanden, m => m.VorhandenesKennzReservieren, m => m.IsSelected, m => m.Zb2Nr, m => m.WunschKennz1, m => m.WunschKennz2, m => m.WunschKennz3, m => m.ResKennz, m => m.ReservationName, m => m.ReservationNr, m => m.Evb, m => m.BestellNr, m => m.Kostenstelle, m => m.TuevAu, m => m.IsSchnellabmeldungSpeicherrelevant);
+            columns.XBoundAllExcept(m => m.Bemerkung, m => m.CocVorhanden, m => m.VorhandenesKennzReservieren, m => m.IsSelected, m => m.Zb2Nr, m => m.WunschKennz1, m => m.WunschKennz2, m => m.WunschKennz3, m => m.ResKennz, m => m.ReservationName, m => m.ReservationNr, m => m.Evb, m => m.BestellNr, m => m.Kostenstelle, m => m.TuevAu, m => m.IsSchnellabmeldungSpeicherrelevant, m => m.Aktion, m => m.Farbe, m => m.FzgModell, m => m.ZulassungNeuesFzg, m => m.ZulassungFahrzeugart, m => m.ZulassungFahrzeugartId, m => m.Loeschen);
         })
     .XAutoColumnConfiguration()
     .ClientEvents(events => events.OnDataBound("OnDataBound_" + gridName).OnRowDataBound("OnRowDataBound_" + gridName))
