--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
@@ -1,7 +1,9 @@
 ﻿@using CkgDomainLogic.General.Contracts
 @model CkgDomainLogic.Autohaus.ViewModels.KroschkeZulassungViewModel 
 @{
-    var logonContext = (LogonContextDataServiceBase)SessionHelper.GetSessionObject("LogonContext");
+    var logonContext = (ILogonContextDataService)SessionHelper.GetSessionObject("LogonContext");
+
+    var _editWarenkorbNichtBearbeiten = logonContext.GetCategorySettingsForWebUser("WARENKORB_NICHT_BEARBEITEN");
 
     var submitRightAuftraegeNichtAbsenden = logonContext.GetCategorySettingsForWebUser("AUFTRAEGE_NICHT_ABSENDEN");
 }
@@ -55,7 +57,7 @@
     var _showShoppingcartInitial = @(Model.ShoppingCartInitialShow.ToString().ToLower());
     var _skipBankAddressData = false;
     var _submitRightAuftraegeNichtAbsenden = '@submitRightAuftraegeNichtAbsenden';
-
+    var _editWarenkorbNichtBearbeiten = '@_editWarenkorbNichtBearbeiten';
 
     function KroschkeZulassungFormPreparePrivate() {
         FormPreparePrivate();
@@ -203,6 +205,12 @@
     }
 
     function ShoppingCartZulassungItemEdit(id, zulParams) {
+
+        if(_editWarenkorbNichtBearbeiten === 'true'){
+            alert("Leider keine ausreichende Berechtigung zum Bearbeiten");
+            return;
+        }
+
         $.ajax({
             type: "POST",
             url: "ShoppingCartZulassungItemEdit",
@@ -224,6 +232,11 @@
     }
 
     function ShoppingCartZulassungItemRemove(id) {
+
+        if(_editWarenkorbNichtBearbeiten === 'true'){
+            alert("Leider keine ausreichende Berechtigung zum Löschen");
+            return;
+        }
 
         if (!confirm('@Localize.ItemDeleteConfirm.ToJavascriptString()'))
             return false;
