--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    var logonContext = (LogonContextDataServiceBase)SessionHelper.GetSessionObject("LogonContext");
+    var logonContext = (CkgDomainLogic.General.Contracts.ILogonContextDataService) SessionHelper.GetSessionObject("LogonContext");
 
     var _submitRightAuftraegeNichtAbsenden = logonContext.GetCategorySettingsForWebUser("AUFTRAEGE_NICHT_ABSENDEN");
+
+    var _editWarenkorbNichtBearbeiten = logonContext.GetCategorySettingsForWebUser("WARENKORB_NICHT_BEARBEITEN");
 }
 
 
@@ -81,6 +83,8 @@
 
     var _submitRightAuftraegeNichtAbsenden = '@_submitRightAuftraegeNichtAbsenden';
 
+    var _editWarenkorbNichtBearbeiten = '@_editWarenkorbNichtBearbeiten';
+
     function ShoppingCartHide() {
         $(".shopping-cart-body").html("");
         $(".hidden-on-shopping-cart-opened").slideDown(200);
@@ -103,7 +107,7 @@
                 ShoppingCartShowResult(result);
             }
         });
-
+        
         return false;
     };
     
@@ -118,6 +122,7 @@
         $(".shopping-cart-body-inner").html(result);
         $(".hidden-on-shopping-cart-opened").slideUp(200);
         $(".shopping-cart-body-inner").slideDown(200);
+       
         FormPreparePrivateGridShoppingCard();
         ShoppingCartMenuRefreshCount();
     }
@@ -220,7 +225,7 @@
 
         // prepare multi row selection
         App.initUniform();
-        Grid_PrepareMultiRowSelected("GridShoppingCart", true);
+        Grid_PrepareMultiRowSelected("GridShoppingCart", true);       
     }
 
     function OnColumnShowHide_GridShoppingCart() {
@@ -284,13 +289,12 @@
             return;
         }
 
-
         if (_submitRightAuftraegeNichtAbsenden.toLowerCase() === "true") {
             $(".shopping-cart-item-selection-count").hide();
         } else {
             $(".shopping-cart-item-selection-count").show();
         }
-
+        
         $(".shopping-cart-item-selection-count").html(GridShoppingCart_MultiSelectItemCountHint(count));
         $("#uncheckAllRecords").attr("checked", true);
         $.uniform.update($("#uncheckAllRecords"));
