again: login logo issue for On + DAD portals

--- a/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/Scripts.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Login/Partial/Scripts.cshtml
@@ -1,5 +1,5 @@
 ﻿<script src="~/assets/plugins/backstretch/jquery.backstretch.min.js" type="text/javascript"></script>      
-<script src="~/assets/scripts/login-soft.js" type="text/javascript"></script>
+<script src="~/assets/scripts/login-soft.js?v=20160317" type="text/javascript"></script>
 
 
 <script type="text/javascript">
