grid scrollbar missing issue (SGW)

--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -1033,4 +1033,8 @@ li.dashboard-dropdown-menu i {
     border-radius: 4px !important;
 }
 
+.portlet.box, .t-grid-pager {
+    overflow-x: hidden;
+}
+
 </style>
