--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationGrid.cshtml
@@ -51,4 +51,20 @@
     display: inline-block;
 }
 
+
+i.menu-item {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    padding-left: 8px;
+}
+i.excel-export 
+{
+    background: transparent url(/ServicesMvc/_Themes/AH2015/images/excel-32x32.png) 0 0 no-repeat !important;
+}
+i.pdf-export 
+{
+    background: transparent url(/ServicesMvc/_Themes/AH2015/images/pdf-32x32.png) 0 0 no-repeat !important;
+}
+
 </style>
