Möglichkeit von Icons in dem AppMenu, Icons hinzugefügt.

--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -1033,4 +1033,32 @@ li.dashboard-dropdown-menu i {
     border-radius: 4px !important;
 }
 
+a.submenu-item  {
+    margin-left: -22px;
+    margin-right: 2px;
+}
+
+i.customicon-search24x24-2 {
+  display: inline-block;
+  line-height: 24px;
+  background-image: url(/ServicesMvc/Images/icons/24x24/search-24x24-2.png);
+  width: 24px;
+  height: 24px;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  vertical-align: top;
+
+
+i.customicon-search24x24 {
+  display: inline-block;
+  line-height: 24px;
+  background-image: url(/ServicesMvc/Images/icons/24x24/search-24x24.png);
+  width: 24px;
+  height: 24px;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  vertical-align: top;
+}
+
+
 </style>
