--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
@@ -152,7 +152,7 @@
 .btn.orange {
   color: white;
   text-shadow: none;	 
-  background-color: #f4a460;
+  background-color: #ffb848;
 }
 .btn.orange:hover, 
 .btn.orange:focus, 
