new "Kroschke Kennzeichen" graphics

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
@@ -70,6 +70,11 @@
             LoadingShow();
             ShoppingCartShow();
         }
+         
+        // TEST
+        setTimeout(function () {
+            $(".button-next").trigger("click");
+        }, 100);
     };
 
     function FormPreparePrivateAjax() {
