--- a/dev/VsSolutionPersister/VsSolutionPersister/MainWindow.xaml
+++ b/dev/VsSolutionPersister/VsSolutionPersister/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="VsSolutionPersister.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow"
+        WindowStartupLocation="CenterScreen"  WindowStyle="ToolWindow"
         SizeToContent="WidthAndHeight" 
+        Topmost="True"
         Title="VS Solution Persister" Deactivated="WindowDeactivated"> 
     <Viewbox Stretch="Uniform"  Width="1100" Height="600">
         <Grid Margin="20">
