--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
@@ -40,15 +40,15 @@
     .kennzeichen-etikette-image {
         display: inline-block;
         margin: 0 0 0 10px;
-        width: 150px;
-        height: 64px;
-        background: url(/ServicesMvc/_Themes/AH2015/images/kennzeichen-etikette.png?v=20160307) 0 0 no-repeat;
+        width: 300px;
+        height: 80px;
+        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-kennzeichen.png?v=20160329) 0 0 no-repeat;
         }
     .kroschke-prime-etikette-form {
         background: url(/ServicesMvc/images/kroschke-prime-etikette-bg.png);
         margin: 5px 0 20px 15px;
         padding: 15px 10px 10px 25px;
-        border: 3px solid #E7A741;
+        border: 3px solid #8FC6DA;
         border-radius: 32px !important;
         box-shadow: 5px 5px 20px -1px rgba(0,0,0,0.75)!important;
         width: 360px;
