Redesign "Kroschke Express Versand" graphics

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -55,9 +55,9 @@
     span.expressversand {
         display: inline-block;
         margin: 0 0 0 10px;
-        width: 100px;
-        height: 64px;
-        background: url(/ServicesMvc/_Themes/AH2015/images/express-versand.png) 0 0 no-repeat;
+        width: 300px;
+        height: 80px;
+        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-express-versand.png?v=20160329) 0 0 no-repeat;
         padding: 0 0 0 0;
     }
 
