Designing "Krosche Prime buttons"

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -54,10 +54,10 @@
 
     span.expressversand {
         display: inline-block;
-        margin: 0 0 0 10px;
-        width: 300px;
+        margin: 0 0 0 13px;
+        width: 260px;
         height: 80px;
-        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-express-versand.png?v=20160329) 0 0 no-repeat;
+        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-express-versand.png?v=20160330_1412) 0 0 no-repeat;
         padding: 0 0 0 0;
     }
 
@@ -79,12 +79,14 @@
     }
     .kroschke-evb-control-group .control-label {
         padding-top: 24px;
+        width: 280px !important;
     }
     .kroschke-evb-control-group .controls {
         padding-top: 20px;
+        margin-left: 290px !important;
     }
     .kroschke-evb {
-        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-evb.png) 55px 0px no-repeat;
+        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-evb.png) 122px 0px no-repeat;
         height: 53px;
     }
 
@@ -113,6 +115,9 @@
         display: table-cell;
         vertical-align: middle;
         padding-left: 10px;
+    }
+    #EvbNr {
+        width: 67px!important;
     }
 
     #hint-versandzulassung {
