--- a/inetpub/wwwroot/PortalZLD/MasterPage/Design.Master
+++ b/inetpub/wwwroot/PortalZLD/MasterPage/Design.Master
@@ -21,6 +21,9 @@
     <div id="website">
 
         <div id="header">
+            <div style="position: absolute; margin-left: 15px; margin-top: 15px">
+                <asp:Label ID="lblHeaderHint" runat="server" Font-Bold="True" Font-Size="14pt" ForeColor="White"></asp:Label>
+            </div>
             <div id="PlaceHeader" runat="Server" class="dvHead">
             <asp:Image ID="imgLogo"  ImageUrl="../Images/kroschke_inside_logo.png" 
                 alt="DAD Logo" class="dadLogo2" runat="server"  /></div>
