--- a/inetpub/wwwroot/PortalZLD/MasterPage/Services.Master
+++ b/inetpub/wwwroot/PortalZLD/MasterPage/Services.Master
@@ -47,6 +47,9 @@
     </asp:UpdateProgress>
     <div id="website">
         <div id="header">
+            <div style="position: absolute; margin-left: 15px; margin-top: 15px">
+                <asp:Label ID="lblHeaderHint" runat="server" Font-Bold="True" Font-Size="14pt" ForeColor="White"></asp:Label>
+            </div>
             <div id="headerContent" runat="server">
                 <asp:Image ID="imgLogo" ImageUrl="../Images/kroschke_inside_logo.png" alt="Kroschke Logo" class="dadLogo2"
                     runat="server" />
