--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Index.cshtml
@@ -13,4 +13,7 @@
     <div id="formWizardTab1" class="hide">
         @Html.Partial("Partial/" + Model.FirstStepPartialViewName)
     </div>
+    <div id="formWizardTab2" class="hide">
+        <span>Test Test Test</span>
+    </div>
 </div>
